--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
+    "redux-persist": "^6.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
